# simple-msg-rocket

./: Cargo.toml  README.md  Rocket.toml
src/: db.rs  main.rs
